[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/UIFont.tres" type="FontFile" id=1]
[ext_resource path="res://Icons/money.png" type="Texture2D" id=2]
[ext_resource path="res://Sounds/type_short.wav" type="AudioStream" id=3]
[ext_resource path="res://Icons/ammo_img.png" type="Texture2D" id=4]
[ext_resource path="res://Scripts/Bullets.gd" type="Script" id=5]
[ext_resource path="res://Icons/faces/face_1.png" type="Texture2D" id=6]
[ext_resource path="res://Scripts/HPIcon.gd" type="Script" id=7]
[ext_resource path="res://Scripts/HPLabel.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Mission.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Money.gd" type="Script" id=10]
[ext_resource path="res://Fonts/BFR.ttf" type="FontFile" id=11]
[ext_resource path="res://Textures/cell.png" type="Texture2D" id=12]
[ext_resource path="res://Scripts/Interface.gd" type="Script" id=13]

[sub_resource type="FontFile" id=21]
font_data = ExtResource( 11 )

[sub_resource type="FontFile" id=27]
font_data = ExtResource( 11 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 13 )

[node name="Bullets" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -38.0
offset_right = 84.0
offset_bottom = -1.0
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 1 )
text = "10"
script = ExtResource( 5 )

[node name="Money" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 237.0
offset_top = -38.0
offset_right = 281.0
offset_bottom = -1.0
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 1 )
text = "0"
script = ExtResource( 10 )

[node name="BulletsIcon" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -35.0
offset_right = 100.0
offset_bottom = 81.0
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="MoneyIcon" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 197.0
offset_top = -35.0
offset_right = 709.0
offset_bottom = 477.0
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 2 )

[node name="Mission" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -373.0
offset_right = -319.0
offset_bottom = 20.0
theme_override_fonts/font = SubResource( 21 )
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="Mission"]
wait_time = 0.2
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Mission"]
stream = ExtResource( 3 )

[node name="HPIcon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -49.0001
offset_right = -38.0
offset_bottom = 16.9999
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="HP" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -44.0
offset_right = 34.0
offset_bottom = -7.0
theme_override_fonts/font = ExtResource( 1 )
text = "100"
script = ExtResource( 8 )

[node name="DialogBox" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -283.0
offset_top = -166.0
offset_right = -243.0
offset_bottom = -152.0

[node name="TextureRect" type="TextureRect" parent="DialogBox"]
offset_left = -44.0
offset_top = -1.0
offset_right = -4.0
offset_bottom = 39.0

[node name="Hints" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -10.0
offset_right = 92.0
offset_bottom = 10.0
theme_override_fonts/font = SubResource( 27 )
text = "Press \"E\" to interact"

[node name="Inventory" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -259.0
offset_top = -61.0
offset_right = -159.0
offset_bottom = 39.0
scale = Vector2( 0.5, 0.5 )

[node name="Cell1" type="TextureRect" parent="Inventory"]
offset_right = 100.0
offset_bottom = 100.0
texture = ExtResource( 12 )

[node name="Item1" type="TextureRect" parent="Inventory/Cell1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -27.0
offset_right = 48.0
offset_bottom = 27.0

[node name="Cell2" type="TextureRect" parent="Inventory"]
offset_left = 104.0
offset_right = 204.0
offset_bottom = 100.0
texture = ExtResource( 12 )

[node name="Item2" type="TextureRect" parent="Inventory/Cell2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="Cell3" type="TextureRect" parent="Inventory"]
offset_left = 208.0
offset_right = 308.0
offset_bottom = 100.0
texture = ExtResource( 12 )

[node name="Item3" type="TextureRect" parent="Inventory/Cell3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="Cell4" type="TextureRect" parent="Inventory"]
offset_left = 312.0
offset_right = 412.0
offset_bottom = 100.0
texture = ExtResource( 12 )

[node name="Item4" type="TextureRect" parent="Inventory/Cell4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[connection signal="timeout" from="Mission/Timer" to="Mission" method="_on_Timer_timeout"]
